--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Momentum</title>
+    <title>What's u gonna do today?</title>
     </head>
     <body>
         <h2 id="clock"></h2>
@@ -25,7 +25,7 @@
         </form>
         </div>
         <div class="td">
-        <ul id="todo-list"></ul>
+            <ul id="todo-list"></ul>
         </div>
         <div id="quote">
             <span></span></br>
